# squads-client

./: .gitignore  COPYRIGHT  Cargo.toml  config.toml  config_authority.json  config_initializer.json  flake.nix  instruction_payer.json  multisig_config_authority.json  multisig_creator.json  multisig_keypair.json  rent_collector.json  script.sh  squads_member1.json  squads_member2.json  squads_member3.json  squads_payer.json  treasury.json
src/: cli.rs  config.rs  main.rs  multisig_program.rs
