[package]
name = "squads-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = "1.0.215"
serde_with = "3.11.0"
solana-client = "1.18.26"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
spl-memo = { version = "4.0.0", features = ["no-entrypoint"] }
squads-multisig-program = { git = "https://github.com/Denommus/squads-v4.git", rev = "5ee11b9c6b149c34d0c184b1e45df65ecee32cdd", features = ["no-entrypoint"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
